# eth-game

./: .gitignore  .gitmodules  Cargo.toml  README.md  env  log  prepare  prepare.sh
.cargo/: config.toml
src/: bitwig.rs  interfaces.rs  main.rs
src/attackers/: fixed.rs  mod.rs  neural.rs
src/defenders/: codegen.rs  denial.rs  mod.rs  permissive.rs
src/environment/: bitwig.rs  inspector.rs  interfaces.rs  mod.rs  runners.rs
src/neural/: casual_attention.rs  mod.rs
src/tests/: mod.rs
src/utils/: mod.rs
