[package]
name = "eth-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
ethers = "2.0.10"
hex = "0.4.3"
logger = "0.4.0"
once_cell = "1.18.0"
rand = "0.8.5"
revm = { path='./revm/crates/revm', features = ["ethersdb"] }
tch = "0.13.0"
